--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -323,7 +323,7 @@ appwrite client --debug // Prints your current configuration</code></pre>
 
 <p>When you set the global configuration parameters using the <b>client</b> service, they take precedence over the local configuration parameters in your <b>appwrite.json</b> thereby switching the CLI to non-interactive mode. </p> 
 
-<p>In this mode, the CLI can only interact with one project at a time. If you look closely, you'll also notice that we use an <b>API Key</b> to autenticate which means the CLI behaves like Appwrite's server SDK. You can learn more about API Keys in the <a href="/docs/getting-started-for-server#apiKey">Appwrite for Server</a> docs.</p>
+<p>In this mode, the CLI can only interact with one project at a time. If you look closely, you'll also notice that we use an <b>API Key</b> to authenticate which means the CLI behaves like Appwrite's server SDK. You can learn more about API Keys in the <a href="/docs/getting-started-for-server#apiKey">Appwrite for Server</a> docs.</p>
 </div>
 
 <h3><a href="/docs/command-line#help" id="help">Help</a></h3>
