--- a/app/views/docs/custom-domains.phtml
+++ b/app/views/docs/custom-domains.phtml
@@ -331,7 +331,7 @@ $dns = [
 
 <p>Every DNS host has its own way of updating DNS settings, and, unfortunately, their dashboard interfaces usually aren't the most intuitive. We recommend that you read the help documentation of your DNS host, also do not hesitate to contact their support for help with their interface and settings.</p>
 
-<p>Below, you'll find a list of registrars and links to their DNS setting documentation‍. If your domain provider isn't listed above, please <a href="/contact" target="_blank">contact us</a>, and we'll include their settings as well.</p>
+<p>Below, you'll find a list of registrars and links to their DNS setting documentation. If your domain provider isn't listed above, please <a href="/contact" target="_blank">contact us</a>, and we'll include their settings as well.</p>
 
 <table class="vertical">
     <thead>
@@ -366,7 +366,7 @@ $dns = [
 
 <p>To connect with your Appwrite server using your new domain, you will have to use the 'setEndpoint' (or 'set_endpoint') method in your SDK of choice and pass your new domain value, for example:</p>
 
-<div class="ide margin-bottom" data-lang="javascript" data-lang-label="Javascript">
+<div class="ide margin-bottom" data-lang="javascript" data-lang-label="JavaScript">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>// Init your Web SDK
 var appwrite = new Appwrite();
 
