--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -39,7 +39,7 @@ $runtimes = $this->getParam('runtimes', []);
     <li>
         <h3>Node.js</h3>
         <div>
-        <div class="ide margin-top-small" data-lang="javascript" data-lang-label="Javascript">
+        <div class="ide margin-top-small" data-lang="javascript" data-lang-label="JavaScript">
             <pre class="line-numbers"><code class="prism language-js" data-prism>module.exports = async (req, res) => {
   const payload =
     req.payload ||
