--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -80,11 +80,11 @@
     </tr>
     <tr>
         <td>Role.users([STATUS])</td>
-        <td>Grants access to any authenticated or anonymous user. You can optionally pass the <span class="tag">verified</span> or <span class="tag">unverified</span> string to target specifc types of users.</td>
+        <td>Grants access to any authenticated or anonymous user. You can optionally pass the <span class="tag">verified</span> or <span class="tag">unverified</span> string to target specific types of users.</td>
     </tr>
     <tr>
         <td>Role.user([USER_ID], [STATUS])</td>
-        <td>Grants access to a specific user by user ID. You can optionally pass the <span class="tag">verified</span> or <span class="tag">unverified</span> string to target specifc types of users.</td>
+        <td>Grants access to a specific user by user ID. You can optionally pass the <span class="tag">verified</span> or <span class="tag">unverified</span> string to target specific types of users.</td>
     </tr>
     <tr>
         <td>Role.team([TEAM_ID])</td>
