--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -109,10 +109,59 @@ Invoke-WebRequest -UseBasicParsing -Uri "https://[HOSTNAME_OR_IP]/v1/account/ses
     </tbody>
 </table>
 
+<table class="full text-size-small">
+    <thead>
+    <tr>
+        <td style="width: 180px">Key:Value</td>
+        <td>Description</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td><code>fileId:[FILE-ID]</code></td>
+        <td>Required, contains the file ID of the new file. Use <code>"unique()"</code> as the file ID when uploading the first chunk to obtain a generated UUID. Be sure to use the ID returned from the first request in all following requests.</td>
+    </tr>
+    <tr>
+        <td><code>file:[CHUNK-DATA]; filename=[FILE-NAME]</code></td>
+        <td>Required, contains file chunk data.</td>
+    </tr>
+    <tr>
+        <td><code>permissions:[PERMISSION ARRAY]</code></td>
+        <td>Required, declares which file this chunk belongs to.</td>
+    </tr>
+    </tbody>
+</table>
+
 <p>While cURL and fetch are great tools to explore other REST endpoints, it's impractical to use for chunked file uploads because you need to split files into chunks.</p>
 
+<p>The multipart form data posted to file upload endpoints has the following format:</p>
 
-curl 'https://[HOSTNAME_OR_IP]/v1//storage/buckets/default/files' \
+
+<!-- Example request -->
+POST /v1//storage/buckets/default/files HTTP/1.1
+Host: [HOSTNAME_OR_IP]
+Content-Type: multipart/form-data; boundary=---WD9146A
+X-Appwrite-Project: Transcriptions
+content-range: bytes 10485760-12582912/12582912
+x-appwrite-id: 6369b0bc1dcf4ff59051
+
+------WebKitFormBoundarye0m6iNBQNHlzTpVM
+Content-Disposition: form-data; name="fileId"
+
+unique()
+------WebKitFormBoundarye0m6iNBQNHlzTpVM
+Content-Disposition: form-data; name="file"; filename="file.txt"
+Content-Type: application/octet-stream
+
+[Chunked Data]
+------WebKitFormBoundarye0m6iNBQNHlzTpVM
+Content-Disposition: form-data; name="permissions"
+
+["read(\"user:627a958ded6424a98a9f\")"]
+------WebKitFormBoundarye0m6iNBQNHlzTpVM--
+
+
+<!-- curl 'https://[HOSTNAME_OR_IP]/v1//storage/buckets/default/files' \
   -H 'Content-Type: multipart/form-data; boundary=------WebKitFormBoundarye0m6iNBQNHlzTpVM' \
   -H 'X-Appwrite-Project: Transcriptions' \
   -H 'content-range: bytes 10485760-12582912/12582912' \
@@ -129,8 +178,9 @@ curl 'https://[HOSTNAME_OR_IP]/v1//storage/buckets/default/files' \
                 ------WebKitFormBoundarye0m6iNBQNHlzTpVM
                 Content-Disposition: form-data; name="permissions"
 
-                [Permissions]
+                ["read(\"user:627a958ded6424a98a9f\")"]
                 ------WebKitFormBoundarye0m6iNBQNHlzTpVM--
                 ' \
   --compressed \
   --insecure
+ -->
