--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -298,4 +298,9 @@ Appwrite's SDKs provides a <code>Query</code> class to generate query strings. W
     </tbody>
 </table>
 
-<h2>Full REST API docs</h2>
+<h2>OpenAPI and Swagger Specs</h2>
+Appwrite provides full REST API specs in the OpenAPI 3 and Swagger format every release. These can be accessed through Appwrites GitHub repository and rendered using a variety of parsers and tools.
+
+<ul>
+    <li class="margin-bottom"><a href="https://github.com/appwrite/appwrite/tree/master/app/config/specs" target="_blank" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Find REST API specs for your Appwrite version</a></li>
+</ul>
